[package]
authors = ["panicbit <panicbit.dev@gmail.com>"]
name = "gpatch"
version = "0.1.0"

[build-dependencies]
bindgen = "0.30.0"

[dependencies]
apply = "0.2.2"
lazy_static = "0.2.8"
libc = "0.2.30"
rand = "0.3.16"
regex = "0.2.2"
serde = "1.0.15"
serde_derive = "1.0.15"
toml = "0.4.5"
va_list = "0.1.0"
xdg = "2.1.0"

[lib]
crate_type = ["staticlib"]

[profile.release]
lto = true
